--- a/ETL/ETL.Tests/packages.config
+++ b/ETL/ETL.Tests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FsCheck" version="1.0.4" targetFramework="net45" />
+  <package id="FsCheck.Xunit" version="1.0.4" targetFramework="net45" />
   <package id="FSharp.Control.AsyncSeq" version="1.15.0" targetFramework="net45" />
   <package id="FSharp.Control.Reactive" version="3.1.2" targetFramework="net45" />
   <package id="FSharp.Core" version="3.1.2" targetFramework="net45" />
@@ -10,10 +11,7 @@
   <package id="Rx-Linq" version="2.2.5" targetFramework="net45" />
   <package id="Rx-Main" version="2.2.5" targetFramework="net45" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net45" />
-  <package id="xunit" version="2.0.0" targetFramework="net45" />
-  <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
-  <package id="xunit.assert" version="2.0.0" targetFramework="net45" />
-  <package id="xunit.core" version="2.0.0" targetFramework="net45" />
-  <package id="xunit.extensibility.core" version="2.0.0" targetFramework="net45" />
+  <package id="Unquote" version="2.2.2" targetFramework="net45" />
+  <package id="xunit" version="1.9.2" targetFramework="net45" />
   <package id="xunit.runner.visualstudio" version="2.0.0" targetFramework="net45" />
 </packages>
