--- a/ETL/ETL.Tests/packages.config
+++ b/ETL/ETL.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Chessie" version="0.1.1" targetFramework="net45" />
   <package id="FsCheck" version="1.0.4" targetFramework="net45" />
   <package id="FsCheck.Xunit" version="1.0.4" targetFramework="net45" />
   <package id="FSharp.Control.AsyncSeq" version="1.15.0" targetFramework="net45" />
