--- a/ETL/ETL/packages.config
+++ b/ETL/ETL/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Chessie" version="0.1.1" targetFramework="net45" />
   <package id="FSharp.Control.AsyncSeq" version="1.15.0" targetFramework="net45" />
   <package id="FSharp.Control.Reactive" version="3.1.2" targetFramework="net45" />
   <package id="FSharp.Core" version="3.1.2" targetFramework="net45" />
